--- a/src/elements/content-sidebar/activity-feed/task-new/Task.scss
+++ b/src/elements/content-sidebar/activity-feed/task-new/Task.scss
@@ -2,6 +2,9 @@
 
 $success-color: $shady-acres;
 $error-color: $red;
+$gray: $nines;
+$gray-dark: $threes;
+$assignment-avatar-spacing: 4px;
 
 .be .bcs-task {
     opacity: 1;
@@ -16,7 +19,7 @@ $error-color: $red;
     }
 
     .bcs-task-due-date {
-        color: $threes;
+        color: $gray-dark;
         font-weight: bold;
         margin-top: 8px;
 
@@ -41,7 +44,7 @@ $error-color: $red;
 
     .bcs-task-assignment-count {
         align-items: center;
-        background: $grey;
+        background: $gray;
         border-radius: 100%;
         color: #fff;
         display: flex;
@@ -54,9 +57,9 @@ $error-color: $red;
         position: relative;
         width: 32px;
 
-        // select all but first instance
-        & + .bcs-task-assignment-status {
-            margin-left: 6px;
+        + .bcs-task-assignment-status,
+        + .bcs-task-assignment-count {
+            margin-left: $assignment-avatar-spacing;
         }
     }
 
@@ -107,7 +110,7 @@ $error-color: $red;
             justify-content: center;
 
             .fill-color {
-                fill: $grey;
+                fill: $gray;
             }
         }
     }
