--- a/src/elements/content-sidebar/activity-feed/comment/Comment.scss
+++ b/src/elements/content-sidebar/activity-feed/comment/Comment.scss
@@ -2,7 +2,7 @@
 
 // tethered styles
 .bcs-comment-delete-confirm {
-    z-index: 1;
+    z-index: $overlay-z-index;
 }
 
 .bcs-comment-confirm-container {
