feat(sidebar): Toggle button (#1268)
* feat(sidebar): Toggle button

* chore: PR comments and add unit tests

* chore: fix classes

* chore: add e2e tests

* chore: update README.md

* chore: decouple resin tags from data testids

--- a/src/elements/content-sidebar/SidebarNav.scss
+++ b/src/elements/content-sidebar/SidebarNav.scss
@@ -1,7 +1,24 @@
 @import '../common/variables';
 
 .bcs {
-    nav {
+    .bcs-SidebarNav {
         border-left: 1px solid $off-white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .bcs-SidebarNav-footer {
+        align-items: center;
+        display: flex;
+        height: 60px;
+        justify-content: center;
+
+        // Need to add these overriding styles because there is a specificity issue with .btn-plain
+        .btn-plain.bdl-SidebarToggleButton {
+            height: 24px;
+            margin: 0 3px;
+            padding: 4px;
+        }
     }
 }
