--- a/src/elements/content-sidebar/versions/VersionsItemBadge.scss
+++ b/src/elements/content-sidebar/versions/VersionsItemBadge.scss
@@ -3,7 +3,7 @@
 .bcs-VersionsItemBadge {
     background-color: $selected-blue-background;
     border-radius: 4px;
-    color: $primary-color;
+    color: $bdl-box-blue;
     font-size: 18px;
     padding: 10px 8px;
     text-align: center;
