--- a/src/elements/content-sidebar/versions/VersionsList.scss
+++ b/src/elements/content-sidebar/versions/VersionsList.scss
@@ -32,7 +32,7 @@
     }
 
     & + & {
-        border-top: $border-height solid $off-white;
+        border-top: $border-height solid $bdl-gray-10;
 
         .bcs-VersionsItem {
             margin-top: -$border-height;
