--- a/src/components/nav-sidebar/NavSidebar.scss
+++ b/src/components/nav-sidebar/NavSidebar.scss
@@ -46,8 +46,12 @@
         position: relative;
 
         .nav-list-collapse {
-            height: 100%;
-            padding: 0 10px;
+            align-items: center;
+            display: flex;
+            height: calc(100% - 10px);
+            justify-content: center;
+            margin: 5px;
+            padding: 0 5px;
             position: absolute;
             right: 0;
 
