--- a/src/elements/content-sidebar/activity-feed/task-new/_mixins.scss
+++ b/src/elements/content-sidebar/activity-feed/task-new/_mixins.scss
@@ -4,7 +4,7 @@
     background: $white;
     border: 1px solid $white;
     border-radius: 50%;
-    bottom: 0;
+    bottom: -1px;
     position: absolute;
-    right: 0;
+    right: -1px;
 }
