fix(avatar): fix avatar initials v-alignment (#1311)

--- a/src/components/avatar/Avatar.scss
+++ b/src/components/avatar/Avatar.scss
@@ -35,6 +35,7 @@
         display: flex;
         font-weight: bold;
         justify-content: center;
+        line-height: 1;
     }
 
     &.avatar--large {
