fix(task-new): Minor visual tweaks to add tasks menu (#1328)
* fix(task-new): Minor visual tweaks to add tasks menu

* fix(task-new): Minor visual tweaks to add tasks menu

--- a/src/elements/content-open-with/ContentOpenWith.scss
+++ b/src/elements/content-open-with/ContentOpenWith.scss
@@ -31,7 +31,7 @@
     }
 
     .bcow-menu-item-description {
-        color: $downtown-grey;
+        color: $bdl-gray-62;
         font-size: 11px;
         line-height: 14px;
         margin: 0;
