--- a/src/elements/content-sidebar/AddTaskMenu.scss
+++ b/src/elements/content-sidebar/AddTaskMenu.scss
@@ -19,9 +19,11 @@ $bcs-AddTaskMenu-width: 256px;
 }
 
 .bcs-AddTaskMenu-title {
-    color: $bdl-neutral-01;
+    font-weight: 700;
 }
 
 .bcs-AddTaskMenu-description {
-    color: $bdl-neutral-02;
+    color: $bdl-gray-62;
+    font-size: 11px;
+    line-height: 14px;
 }
