feat(versions): Add version group headers based on relative date (#1330)

--- a/src/elements/content-sidebar/versions/VersionsList.scss
+++ b/src/elements/content-sidebar/versions/VersionsList.scss
@@ -2,12 +2,7 @@
 
 .bcs-VersionsList {
     .be & {
-        padding-bottom: 20px;
-    }
-
-    &.bcs-is-empty {
-        padding-top: 10px;
-        text-align: center;
+        margin: 0;
     }
 }
 
