--- a/src/elements/content-sidebar/versions/VersionsSidebar.scss
+++ b/src/elements/content-sidebar/versions/VersionsSidebar.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .bcs-Versions {
     .bcs-scroll-content {
         width: 100%;
@@ -22,4 +24,21 @@
     height: 100%;
     padding-left: 25px;
     padding-right: 25px;
+}
+
+.bcs-Versions-empty {
+    padding-top: 10px;
+    text-align: center;
+}
+
+.bcs-Versions-menu {
+    .be & {
+        padding-bottom: 20px;
+    }
+}
+
+.bcs-Versions-menu-item {
+    & + & {
+        border-top: 1px solid $bdl-gray-10;
+    }
 }
