feat(versions): Add support for version limits to sidebar (#1316)

--- a/src/elements/content-sidebar/versions/VersionsItem.scss
+++ b/src/elements/content-sidebar/versions/VersionsItem.scss
@@ -39,6 +39,11 @@
     overflow: hidden;
 }
 
+.bcs-VersionsItem-footer {
+    color: $bdl-gray-62;
+    font-size: 12px;
+}
+
 .bcs-VersionsItem-info {
     align-items: center;
     color: $bdl-gray-62;
