--- a/src/components/grid-view/GridView.scss
+++ b/src/components/grid-view/GridView.scss
@@ -1,10 +1,6 @@
 @import '../../elements/common/variables';
 @import '../../styles/variables';
 
-$columns1prct: 100%;
-$columns3prct: calc(33.3333% - 6.6666px); /* 100%/3 - 20px/3 */
-$columns5prct: calc(20% - 8px); /* 100%/5 - 40px/5 */
-
 .bdl-GridView {
     // margin: 20px 0 0;
     padding: 0 5px;
@@ -15,16 +11,22 @@ $columns5prct: calc(20% - 8px); /* 100%/5 - 40px/5 */
     }
 
     &.bdl-GridView--columns-1 .bdl-GridViewSlot {
+        $columns1prct: 100%;
+
         flex-basis: $columns1prct;
         max-width: $columns1prct;
     }
 
     &.bdl-GridView--columns-3 .bdl-GridViewSlot {
+        $columns3prct: calc(33.3333% - 6.6666px); /* 100%/3 - 20px/3 */
+
         flex-basis: $columns3prct;
         max-width: $columns3prct;
     }
 
     &.bdl-GridView--columns-5 .bdl-GridViewSlot {
+        $columns5prct: calc(20% - 8px); /* 100%/5 - 40px/5 */
+
         flex-basis: $columns5prct;
         max-width: $columns5prct;
     }
@@ -33,7 +35,7 @@ $columns5prct: calc(20% - 8px); /* 100%/5 - 40px/5 */
         margin: 0;
     }
 
-    .table-row {
+    .bdl-GridView-tableRow {
         border: none;
     }
 }
