--- a/src/elements/content-sidebar/activity-feed/activity-feed/ActivityFeed.scss
+++ b/src/elements/content-sidebar/activity-feed/activity-feed/ActivityFeed.scss
@@ -17,9 +17,8 @@
     }
 
     .bcs-activity-feed-items-container {
-        align-items: center;
         display: flex;
-        flex: 1 1;
+        flex: 1 1 auto;
         flex-direction: column;
         overflow-x: hidden;
         overflow-y: auto;
