--- a/src/components/pill-selector-dropdown/PillSelector.scss
+++ b/src/components/pill-selector-dropdown/PillSelector.scss
@@ -91,8 +91,7 @@
             }
         }
 
-        .pill-selector-input,
-        input[type='text'].pill-selector-input {
+        .pill-selector-input {
             background-color: transparent;
             border: 0;
             box-shadow: none;
@@ -104,6 +103,8 @@
             min-width: 0;
             overflow: hidden;
             padding: 5px 3px 3px;
+            resize: none;
+            white-space: nowrap;
 
             &:focus,
             &:hover {
