feat(preview): better message when blocked by a policy (#1346)
* feat(preview): better message when blocked by a policy

* fix: PR feedback

--- a/src/elements/content-preview/PreviewLoading.scss
+++ b/src/elements/content-preview/PreviewLoading.scss
@@ -1,14 +1,15 @@
 @import '../common/variables';
 
-.bcpr {
-    .bcpr-loading {
-        color: $twos;
-        position: relative;
-        text-align: center;
-        z-index: 1;
+.bcpr-PreviewLoading {
+    align-items: center;
+    color: $bdl-gray;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 
-        .bcpr-loading-text {
-            font-size: 14px;
-        }
-    }
+.bcpr-PreviewLoading-message {
+    font-size: 14px;
+    margin-top: 20px;
+    max-width: 400px;
 }
