fix(sidebar): Add flex-shrink 0 to comment input (#1359)

--- a/src/elements/content-sidebar/activity-feed/activity-feed/ActivityFeed.scss
+++ b/src/elements/content-sidebar/activity-feed/activity-feed/ActivityFeed.scss
@@ -86,6 +86,7 @@
 
     .bcs-activity-feed-comment-input {
         background-color: $white;
+        flex: 0 0 auto;
         margin-bottom: 4px;
         max-height: 500px;
         min-height: 93px;
