fix(comment): padding and a11y adjustments for comment UI (#1358)
* fix(comment): padding and a11y adjustments for comment UI

* feat(comment): add VO support with role attribute

--- a/src/elements/content-sidebar/activity-feed/comment/Comment.scss
+++ b/src/elements/content-sidebar/activity-feed/comment/Comment.scss
@@ -18,11 +18,11 @@
 
     .bcs-comment-confirm-delete,
     .bcs-comment-confirm-cancel {
-        margin: 0;
+        margin-left: 0;
     }
 
     .bcs-comment-confirm-cancel {
-        margin-right: 8px;
+        margin-right: 10px;
     }
 }
 
