fix(pill-selector-dropdown): disable pills when PillSelector is disabled (#1357)
* fix(pill-selector-dropdown): disable pills when PillSelector is disabled

* fix(pill-selector-dropdown): disable pills when PillSelector is disabled

--- a/src/styles/common/_pills.scss
+++ b/src/styles/common/_pills.scss
@@ -28,12 +28,23 @@ $pillTextColorDark: lighten($black, 31%);
     }
 
     .close-btn {
+        background-color: transparent;
+        border: none;
         color: $white;
         cursor: pointer;
         flex: none;
         font-size: 8px;
         font-weight: 600;
-        margin-left: 8px;
+        margin: 0 0 0 4px;
+        padding: 4px 0 4px 4px;
+    }
+
+    &.is-disabled {
+        opacity: .5;
+
+        .close-btn {
+            cursor: default;
+        }
     }
 
     &.is-invalid {
