fix(button): remove horizontal margin from buttons (#1362)
* fix(button): remove horizontal margin from buttons

changes buttons to not have a default horizontal margin,
except between other buttons

* fix(buttons): reset spacing between buttons to 10px

--- a/src/styles/common/_buttons.scss
+++ b/src/styles/common/_buttons.scss
@@ -18,7 +18,7 @@
     font-weight: 400;
     letter-spacing: .035em;
     line-height: 10px;
-    margin: 5px;
+    margin: 5px 0;
     padding: 10px 16px;
     position: relative;
     text-align: center;
@@ -79,6 +79,10 @@
     &.is-disabled {
         box-shadow: none;
         opacity: .4;
+    }
+
+    & + & {
+        margin-left: 10px;
     }
 }
 
