fix(classification): Classification badge UX tweaks (#1378)
* feat(classification): Classification badge UX tweaks

* fix: Capitalized classify message

* fix: Fixed snapshot

* chore: Updated properties file

* chore: Removed tag icon from classification

--- a/src/features/classification/_mixins.scss
+++ b/src/features/classification/_mixins.scss
@@ -6,13 +6,11 @@
     border-radius: $bdl-border-radius-size;
     display: inline-flex;
     margin: 0;
-    padding: 2px 5px;
+    padding: 0 5px;
 }
 
 @mixin bdl-ClassificationBadge-name {
     font-size: 10px !important; // To inhibit overriding
     font-weight: 600;
-    line-height: initial;
-    margin-left: 5px;
-    text-transform: uppercase;
+    line-height: 16px;
 }
