--- a/src/features/unified-share-modal/UnifiedShareModal.scss
+++ b/src/features/unified-share-modal/UnifiedShareModal.scss
@@ -313,7 +313,7 @@
 
         th,
         td {
-            padding: .5em;
+            padding: 0.5em;
         }
 
         tr {
@@ -341,4 +341,9 @@
 .bdl-sharedLink-revoke {
     opacity: 0;
     transition: $bdl-transitionDurationBase;
+}
+
+.bdl-SharedLinkSection-description {
+    color: $bdl-gray-80;
+    font-size: 13px;
 }
